[sc-7912] & [sc-8024]: Implement new sidenav and page spacing

--- a/apps/dashboard/src/app/account/account-home/account-home.component.html
+++ b/apps/dashboard/src/app/account/account-home/account-home.component.html
@@ -1,4 +1,4 @@
-<div class="account-home">
+<div class="account-home page-spacing">
   <div class="container-row">
     <div
       class="processing-stats"
