--- a/apps/dashboard/src/app/account/account-nua/account-nua.component.html
+++ b/apps/dashboard/src/app/account/account-nua/account-nua.component.html
@@ -1,8 +1,8 @@
-<div class="account-nua">
+<div class="page-spacing">
   <h1>{{ 'account.nua_keys' | translate }}</h1>
   <div class="warning">
     <pa-icon name="warning"></pa-icon>
-    {{ 'stash.service_access_description' | translate }}
+    {{ 'api-key-management.description' | translate }}
   </div>
 
   <pa-button
