--- a/apps/dashboard/src/app/account/account-users/account-users.component.html
+++ b/apps/dashboard/src/app/account/account-users/account-users.component.html
@@ -1,9 +1,9 @@
 <div
-  class="account-users"
+  class="account-users page-spacing"
   *ngIf="users">
-  <h1>{{ 'account.users' | translate }}</h1>
+  <h1>{{ 'sidenav.users' | translate }}</h1>
 
-  <div class="mb-28">
+  <div>
     <div class="users-amount">
       {{ 'account.users_amount' | translate }}
       <strong>{{ users.length }}</strong>
