--- a/apps/dashboard/src/app/activity/activity-download.component.html
+++ b/apps/dashboard/src/app/activity/activity-download.component.html
@@ -1,5 +1,5 @@
-<div class="activity-download">
-  <h1>{{ 'stash.side.activity' | translate }}</h1>
+<div class="page-spacing">
+  <h1>{{ 'sidenav.activity' | translate }}</h1>
   <pa-tabs
     class="primary-tabs"
     noSlider
