--- a/apps/dashboard/src/app/activity/activity-download.component.scss
+++ b/apps/dashboard/src/app/activity/activity-download.component.scss
@@ -1,8 +1,4 @@
-@import 'variables';
-
-.activity-download {
-  padding: rhythm(6) rhythm(12);
-}
+@import 'apps/dashboard/src/variables';
 
 .primary-tabs {
   display: block;
