--- a/apps/dashboard/src/app/activity/activity.component.scss
+++ b/apps/dashboard/src/app/activity/activity.component.scss
@@ -1,9 +1,7 @@
-@import 'variables';
+@import 'apps/dashboard/src/variables';
 
 .activity {
-  padding: rhythm(6) var(--app-layout-margin-right) rhythm(7) var(--app-layout-margin-left);
   position: relative;
-  min-height: 200px;
 }
 
 .tab-content {
