--- a/apps/dashboard/src/app/knowledge-box/knowledge-box-home/knowledge-box-home.component.html
+++ b/apps/dashboard/src/app/knowledge-box/knowledge-box-home/knowledge-box-home.component.html
@@ -1,4 +1,4 @@
-<div class="knowledge-box-home">
+<div class="knowledge-box-home page-spacing">
   @if (!!(endpoint | async)) {
     <div
       data-cy="home-endpoint-container"
