--- a/apps/dashboard/src/app/knowledge-box/knowledge-box-keys/knowledge-box-keys.component.html
+++ b/apps/dashboard/src/app/knowledge-box/knowledge-box-keys/knowledge-box-keys.component.html
@@ -1,4 +1,4 @@
-<div class="knowledge-box-keys">
+<div class="knowledge-box-keys page-spacing">
   <h1>{{ 'api-key-management.title' | translate }}</h1>
   <div class="warning">{{ 'api-key-management.description' | translate }}</div>
   <app-service-access></app-service-access>
