--- a/apps/dashboard/src/app/knowledge-box/knowledge-box-keys/knowledge-box-keys.component.scss
+++ b/apps/dashboard/src/app/knowledge-box/knowledge-box-keys/knowledge-box-keys.component.scss
@@ -1,8 +1,6 @@
-@import 'variables';
+@import 'apps/dashboard/src/variables';
 
 .knowledge-box-keys {
-  padding: 70px var(--app-layout-margin-right) 70px var(--app-layout-margin-left);
-
   h2 {
     margin: 0 0 rhythm(0.25) 0;
   }
