--- a/apps/dashboard/src/app/knowledge-box/knowledge-box-training/knowledge-box-training.component.html
+++ b/apps/dashboard/src/app/knowledge-box/knowledge-box-training/knowledge-box-training.component.html
@@ -1,5 +1,5 @@
-<div class="knowledge-box-training">
-  <h1>{{ 'stash.side.trainings' | translate }}</h1>
+<div class="knowledge-box-training page-spacing">
+  <h1>{{ 'sidenav.trainings' | translate }}</h1>
   <div
     *ngIf="cannotTrain | async"
     class="warning">
