--- a/apps/dashboard/src/app/knowledge-box/knowledge-box-training/training-history/training-history.component.html
+++ b/apps/dashboard/src/app/knowledge-box/knowledge-box-training/training-history/training-history.component.html
@@ -1,9 +1,9 @@
-<div class="training-history">
+<div class="training-history page-spacing">
   <nsi-back-button
     class="select-kb-back"
     link=".."
-    text="stash.side.trainings">
-    {{ 'stash.side.trainings' | translate }}
+    text="sidenav.trainings">
+    {{ 'sidenav.trainings' | translate }}
   </nsi-back-button>
   <h1>{{ 'training.history' | translate }}</h1>
 
