--- a/apps/dashboard/src/app/knowledge-box/knowledge-box-training/training-history/training-history.component.scss
+++ b/apps/dashboard/src/app/knowledge-box/knowledge-box-training/training-history/training-history.component.scss
@@ -1,8 +1,4 @@
-@import 'variables';
-
-.training-history {
-  padding: rhythm(6) rhythm(12);
-}
+@import 'apps/dashboard/src/variables';
 
 nsi-back-button {
   display: inline-flex;
