--- a/apps/dashboard/src/app/knowledge-box/knowledge-box-users/knowledge-box-users.component.scss
+++ b/apps/dashboard/src/app/knowledge-box/knowledge-box-users/knowledge-box-users.component.scss
@@ -1,8 +1,4 @@
-@import 'variables';
-
-.knowledge-box-users {
-  padding: rhythm(6) rhythm(12);
-}
+@import 'apps/dashboard/src/variables';
 
 h2 {
   margin-bottom: rhythm(6);
