--- a/apps/dashboard/src/app/knowledge-box/knowledge-box-users/users-manage/users-manage.component.scss
+++ b/apps/dashboard/src/app/knowledge-box/knowledge-box-users/users-manage/users-manage.component.scss
@@ -1,7 +1,7 @@
-@import 'variables';
+@import 'apps/dashboard/src/variables';
 
 h3 {
-  margin-bottom: rhythm(2)
+  margin-bottom: rhythm(2);
 }
 
 .add-user {
