--- a/libs/common/src/lib/knowledge-box-settings/knowledge-box-settings.component.html
+++ b/libs/common/src/lib/knowledge-box-settings/knowledge-box-settings.component.html
@@ -1,5 +1,5 @@
 <div
-  class="knowledge-box-settings"
+  class="knowledge-box-settings page-spacing"
   *ngIf="kb && account">
   <div class="section">
     <h1>{{ 'stash.profile' | translate }}</h1>
