--- a/libs/common/src/lib/label/label-sets/label-set/label-set.component.html
+++ b/libs/common/src/lib/label/label-sets/label-set/label-set.component.html
@@ -95,7 +95,7 @@
   </div>
 
   <footer class="form-section-container">
-    <div></div>
+    <div class="footer-placeholder"></div>
     <div class="button-container">
       <pa-button
         kind="primary"
