--- a/libs/common/src/lib/resources/resource-list/resource-list.component.html
+++ b/libs/common/src/lib/resources/resource-list/resource-list.component.html
@@ -1,4 +1,4 @@
-<div class="resource-list">
+<div class="resource-list page-spacing">
   <div class="resource-list-header">
     @if (isMainView) {
       <form
