--- a/libs/common/src/lib/upload/upload-data/upload-data.component.html
+++ b/libs/common/src/lib/upload/upload-data/upload-data.component.html
@@ -1,4 +1,4 @@
-<div class="upload-data-page">
+<div class="upload-data-page page-spacing">
   <h1>{{ 'stash.upload_data' | translate }}</h1>
   <p class="body-m">{{ 'stash.upload.page-subtitle' | translate }}</p>
 
