--- a/libs/sistema/theme/tokens/_spacing.tokens.scss
+++ b/libs/sistema/theme/tokens/_spacing.tokens.scss
@@ -26,6 +26,7 @@ $rhythm: (
   20: ($spacer * 20),     //  20   unit - 160px - 10     rem
   22: ($spacer * 22),     //  22   unit - 176px - 11     rem
   24: ($spacer * 24),     //  24   unit - 192px - 12     rem
+  26: ($spacer * 26),     //  26   unit - 208px - 13     rem
   28: ($spacer * 28),     //  28   unit - 224px - 14     rem
   32: ($spacer * 32),     //  32   unit - 256px - 16     rem
   35: ($spacer * 35),     //  35   unit - 280px - 17.5   rem
