--- a/apps/dashboard/src/app/account/account-home/account-home.component.scss
+++ b/apps/dashboard/src/app/account/account-home/account-home.component.scss
@@ -1,8 +1,7 @@
-@import 'variables';
+@import 'apps/dashboard/src/variables';
 
 .account-home {
   max-width: calc(#{rhythm(90)} * 2);
-  padding: 4.5vw var(--app-layout-margin-right) 4.5vw var(--app-layout-margin-left);
 
   .container-row {
     display: flex;
