--- a/apps/dashboard/src/app/account/account-nua/account-nua.component.scss
+++ b/apps/dashboard/src/app/account/account-nua/account-nua.component.scss
@@ -1,8 +1,4 @@
-@import 'variables';
-
-.account-nua {
-  padding: 70px var(--app-layout-margin-right) 60px var(--app-layout-margin-left);
-}
+@import 'apps/dashboard/src/variables';
 
 h2 {
   margin: 0 0 rhythm(1) 0;
