--- a/apps/dashboard/src/app/farewell/feedback.component.scss
+++ b/apps/dashboard/src/app/farewell/feedback.component.scss
@@ -1,4 +1,4 @@
-@import 'variables';
+@import 'apps/dashboard/src/variables';
 
 .message {
   display: flex;
@@ -7,7 +7,7 @@
   width: rhythm(48);
 }
 
-pa-radio-group{
+pa-radio-group {
   display: flex !important;
   flex-direction: column;
   gap: rhythm(1);
