--- a/apps/dashboard/src/app/knowledge-box/knowledge-box-home/knowledge-box-home.component.scss
+++ b/apps/dashboard/src/app/knowledge-box/knowledge-box-home/knowledge-box-home.component.scss
@@ -1,8 +1,6 @@
-@import 'variables';
+@import 'apps/dashboard/src/variables';
 
 .knowledge-box-home {
-  padding: rhythm(6) var(--app-layout-margin-right) rhythm(6) var(--app-layout-margin-left);
-
   $flex-gap: rhythm(3);
   $width-right-column: rhythm(40) + rhythm(1);
   .home-main-layout {
