--- a/apps/dashboard/src/app/knowledge-box/service-access/service-access.component.html
+++ b/apps/dashboard/src/app/knowledge-box/service-access/service-access.component.html
@@ -3,7 +3,7 @@
     <form
       [formGroup]="addForm"
       (ngSubmit)="addServiceAccess()">
-      <h3>{{ 'api-key-management.create-key.title' | translate }}</h3>
+      <h4>{{ 'api-key-management.create-key.title' | translate }}</h4>
       <div class="form-content">
         <pa-input formControlName="title">{{ 'generic.name' | translate }}</pa-input>
 
@@ -24,78 +24,78 @@
       </div>
     </form>
 
-    <div
-      *ngIf="serviceAccess && serviceAccess.length > 0"
-      class="container">
-      <h3>{{ 'api-key-management.view-edit-keys.title' | translate }}</h3>
-      <div class="service-access-list">
-        <div
-          class="service-access"
-          *ngFor="let sa of serviceAccess">
-          <div class="service-access-header">
-            <div class="service-access-title">
-              <pa-button
-                aspect="basic"
-                icon="chevron-right"
-                size="small"
-                class="service-access-title-arrow"
-                [disabled]="!sa.keys || sa.keys.length === 0"
-                [class.expanded]="isExpanded(sa.id)"
-                (click)="toggleSA(sa.id)"></pa-button>
-              <span>{{ sa.title }}</span>
-            </div>
-            <div class="service-access-actions">
-              <pa-button
-                (click)="createKey(sa)"
-                aspect="basic"
-                icon="plus"
-                size="small"
-                paTooltip="api-key-management.create-key.button">
-                {{ 'api-key-management.create-key.button' | translate }}
-              </pa-button>
-              <pa-button
-                (click)="deleteServiceAccess(sa)"
-                aspect="basic"
-                icon="trash"
-                size="small"
-                paTooltip="generic.delete">
-                {{ 'generic.delete' | translate }}
-              </pa-button>
-            </div>
-          </div>
-
-          <ng-container *ngIf="sa.keys && sa.keys.length > 0">
-            <div
-              class="service-access-keys"
-              [class.expanded]="isExpanded(sa.id)">
-              <div
-                class="service-access-key"
-                *ngFor="let key of sa.keys">
-                <div class="service-access-key-id">
-                  {{ key.id }}
-                </div>
-                <div>
-                  <pa-datetime
-                    [datetime]="key.expires"
-                    dateOnly></pa-datetime>
-                </div>
-                <div class="service-access-key-actions">
-                  <pa-button
-                    (click)="deleteKey(sa, key)"
-                    class="delete-key"
-                    aspect="basic"
-                    icon="trash"
-                    size="small"
-                    paTooltip="generic.delete">
-                    {{ 'generic.delete' | translate }}
-                  </pa-button>
-                </div>
+    @if (serviceAccess && serviceAccess.length > 0) {
+      <div class="container">
+        <h4>{{ 'api-key-management.view-edit-keys.title' | translate }}</h4>
+        <div class="service-access-list">
+          <div
+            class="service-access"
+            *ngFor="let sa of serviceAccess">
+            <div class="service-access-header">
+              <div class="service-access-title">
+                <pa-button
+                  aspect="basic"
+                  icon="chevron-right"
+                  size="small"
+                  class="service-access-title-arrow"
+                  [disabled]="!sa.keys || sa.keys.length === 0"
+                  [class.expanded]="isExpanded(sa.id)"
+                  (click)="toggleSA(sa.id)"></pa-button>
+                <span>{{ sa.title }}</span>
+              </div>
+              <div class="service-access-actions">
+                <pa-button
+                  (click)="createKey(sa)"
+                  aspect="basic"
+                  icon="plus"
+                  size="small"
+                  paTooltip="api-key-management.create-key.button">
+                  {{ 'api-key-management.create-key.button' | translate }}
+                </pa-button>
+                <pa-button
+                  (click)="deleteServiceAccess(sa)"
+                  aspect="basic"
+                  icon="trash"
+                  size="small"
+                  paTooltip="generic.delete">
+                  {{ 'generic.delete' | translate }}
+                </pa-button>
               </div>
             </div>
-          </ng-container>
+
+            @if (sa.keys && sa.keys.length > 0) {
+              <div
+                class="service-access-keys"
+                [class.expanded]="isExpanded(sa.id)">
+                <div
+                  class="service-access-key"
+                  *ngFor="let key of sa.keys">
+                  <div class="service-access-key-id">
+                    {{ key.id }}
+                  </div>
+                  <div>
+                    <pa-datetime
+                      [datetime]="key.expires"
+                      dateOnly></pa-datetime>
+                  </div>
+                  <div class="service-access-key-actions">
+                    <pa-button
+                      (click)="deleteKey(sa, key)"
+                      class="delete-key"
+                      aspect="basic"
+                      icon="trash"
+                      size="small"
+                      paTooltip="generic.delete">
+                      {{ 'generic.delete' | translate }}
+                    </pa-button>
+                  </div>
+                </div>
+              </div>
+            }
+          </div>
         </div>
       </div>
-    </div>
+    }
   </div>
   <ncom-hint
     label="How to use your API key in the API"
