--- a/libs/common/src/lib/entities/entities.component.html
+++ b/libs/common/src/lib/entities/entities.component.html
@@ -1,4 +1,4 @@
-<div class="ner-management">
+<div class="ner-management page-spacing">
   <header>
     <h1>{{ 'ner-management.page-title' | translate }}</h1>
     <p>{{ 'ner-management.page-description' | translate }}</p>
