--- a/libs/common/src/lib/label/label-sets/label-set/label-set.component.scss
+++ b/libs/common/src/lib/label/label-sets/label-set/label-set.component.scss
@@ -1,20 +1,12 @@
 @import 'apps/dashboard/src/variables';
 
-$dashboard-header-height: rhythm(9);
 $page-title-height: rhythm(8);
 $global-width: rhythm(80);
 $form-width: rhythm(50);
 $main-gap: rhythm(4);
-$padding-side-page: rhythm(12);
-$padding-vertical-page: rhythm(6);
 $footer-height: rhythm(5);
 $footer-vertical-padding: rhythm(4);
 $footer-top-margin: rhythm(2);
-
-:host {
-  display: block;
-  padding: $padding-vertical-page $padding-side-page;
-}
 
 .label-set-editor {
   .form-container {
@@ -86,9 +78,9 @@ $footer-top-margin: rhythm(2);
   }
 
   .scrollable-container {
-    max-height: calc(
-      100vh - #{$dashboard-header-height} - #{$page-title-height} - #{$padding-vertical-page} - #{$footer-height} - #{$footer-top-margin} -
-        #{$footer-vertical-padding}* 2
+    height: calc(
+      100vh - var(--app-topbar-height) - var(--app-layout-padding-top) - #{$page-title-height} - #{$footer-height} - #{$footer-top-margin} -
+        #{$footer-vertical-padding}* 2 - var(--app-layout-padding-bottom)
     );
     overflow-y: auto;
   }
@@ -96,9 +88,13 @@ $footer-top-margin: rhythm(2);
   footer {
     bottom: 0;
     box-shadow: inset 0 1px 0 $color-neutral-light;
-    left: $global-width - $form-width + $main-gap + $padding-side-page + rhythm(1);
     padding: $footer-vertical-padding 0;
-    position: fixed;
+    position: sticky;
+
+    .footer-placeholder {
+      flex: 0 0 auto !important;
+      width: rhythm(28);
+    }
   }
 
   .button-container {
