--- a/libs/common/src/lib/resources/resource-list/resources-table.component.scss
+++ b/libs/common/src/lib/resources/resource-list/resources-table.component.scss
@@ -6,7 +6,7 @@
   display: flex;
   height: rhythm(8);
   position: sticky;
-  top: calc(var(--app-topbar-height) + #{rhythm(6)});
+  top: calc(#{rhythm(3)} + #{rhythm(6)});
   z-index: 1;
 
   .resource-bulk-actions {
