--- a/libs/common/src/lib/search/search.component.html
+++ b/libs/common/src/lib/search/search.component.html
@@ -1,4 +1,4 @@
-<div class="search-page">
+<div class="search-page page-spacing">
   <div class="search-bar-section">
     <div
       class="search-bar-container"
