--- a/libs/common/src/lib/search/search.component.scss
+++ b/libs/common/src/lib/search/search.component.scss
@@ -1,8 +1,6 @@
-@import 'variables';
+@import 'apps/dashboard/src/variables';
 
 .search-page {
-  padding: rhythm(5) var(--app-layout-margin-right) rhythm(8) var(--app-layout-margin-left);
-
   .search-bar-section {
     display: flex;
     gap: rhythm(8);
