Move CSS variables in _app-common.scss and initialise them with rhythm

--- a/apps/dashboard/src/app/account/account-nua/nua-activity/nua-activity.component.html
+++ b/apps/dashboard/src/app/account/account-nua/nua-activity/nua-activity.component.html
@@ -1,4 +1,4 @@
-<div class="nua-activity">
+<div class="nua-activity page-spacing">
   <header class="nua-activity-title">
     <div class="title-and-back">
       <pa-button
