--- a/apps/manager-v2/src/styles.scss
+++ b/apps/manager-v2/src/styles.scss
@@ -1,6 +1,5 @@
 @import 'libs/sistema/theme/fonts';
 @import 'libs/pastanaga-angular/projects/pastanaga-angular/src/styles/core';
-@import 'libs/common/src/lib/base/css-variables';
 @import 'libs/sistema/styles/apps-common';
 @import 'variables';
 
@@ -55,7 +54,9 @@ nav {
         flex-direction: column;
 
         li {
-          transition: background-color $transition-hint, color $transition-hint;
+          transition:
+            background-color $transition-hint,
+            color $transition-hint;
 
           &:hover {
             background-color: $color-neutral-light;
