--- a/libs/common/src/lib/entities/entity-list/entity-list.component.scss
+++ b/libs/common/src/lib/entities/entity-list/entity-list.component.scss
@@ -36,4 +36,9 @@
       gap: rhythm(0.5);
     }
   }
+  .more-ners {
+    line-height: rhythm(5);
+    margin-bottom: 0;
+    text-align: center;
+  }
 }
